add default api implementation for frontend development
